CPU carriers floor at 8, never capped below cores; more virtual threads
JK-2212: CPU_THREADS was min(cores, 8) — a 24-core host ran at a third of
the workspace graph's widest level. Now max(cores, 8): CPU steps mostly
block on forked compiler JVMs, and real fork concurrency stays governed by
the memory plan (PluginSlots), so the floor is safe on small hosts too.
Per-fork blocking helpers (test-worker drivers, the converse watchdog) move
to virtual threads; the io() pool already was. Named singleton service
threads stay platform for thread-dump discoverability.